Update build.gradle.kts to use testing